refactor: clean code and command unused service